tests/fixtures/invalid/not-a-plist.mobileconfig
This is not a valid plist file.
It's just plain text that should fail parsing.
